--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo 'Error: no test specified' &amp;&amp; exit 1"
+    "test": "echo 'Error: no test specified' &amp;&amp; exit 1",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
